welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but '(' found.
	while(tab.(casetab) != value | casetab != tab.length){
                  ^